# django-ninja-plus

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml  test_full.yml
docs/: contribution.md  index.md  route_context.md  settings.md
docs/api_controller/: api_controller_async_permission.md  api_controller_permission.md  api_controller_route.md  index.md  model_controller.md
docs/api_controller/model_controller/: 01_getting_started.md  02_model_configuration.md  03_model_service.md  04_parameters.md
docs/dependency-injection/: index.md  testing.md
docs/tutorial/: authentication.md  body_request.md  custom_exception.md  form.md  index.md  ordering.md  pagination.md  path.md  query.md  searching.md  testing.md  throttling.md  versioning.md
ninja_plus/: __init__.py  apps.py  constants.py  context.py  dependency_resolver.py  exceptions.py  lazy.py  main.py  modules.py  operation.py  router.py  types.py
ninja_plus/conf/: decorator.py  package_settings.py
ninja_plus/controllers/: base.py  registry.py  utils.py
ninja_plus/controllers/model/: builder.py  endpoints.py  interfaces.py  path_resolver.py  schemas.py  service.py
ninja_plus/controllers/route/: __init__.py  route_functions.py
ninja_plus/ordering/: __init__.py  decorator.py  models.py  operation.py
ninja_plus/pagination/: __init__.py  decorator.py  operations.py
ninja_plus/pagination/models/: page_by_number.py
ninja_plus/permissions/: base.py  common.py
ninja_plus/searching/: __init__.py  decorators.py  models.py  operations.py
ninja_plus/security/: session.py
ninja_plus/testing/: __init__.py  client.py
ninja_plus/throttling/: decorator.py  model.py
tests/: conftest.py  controllers.py  main.py  test_api_instance.py  test_async_auth.py  test_async_permissions.py  test_controller.py  test_controller_registry.py  test_dependency_resolver.py  test_deprecation_warnings.py  test_django_ninja_router.py  test_event_controller.py  test_exceptions.py  test_generic_patch.py  test_lazy_import.py  test_operation.py  test_ordering.py  test_pagination.py  test_path.py  test_permissions.py  test_query.py  test_reflect.py  test_route.py  test_searching.py  test_settings.py  test_shortcuts.py  test_status.py  test_testclient.py  test_testclient_with_controllers.py  urls.py  utils.py
tests/test_model_controller/: async_samples.py  model_service_with_sample.py  samples.py  test_model_async_controller_operation.py  test_model_controller_configurations.py  test_model_controller_operation.py  test_model_controller_schema.py  test_model_service_operation.py  test_path_resolver.py
tests/test_security/: test_session.py
tests/test_throthling/: sample_models.py  test_decorator.py  test_models.py  test_throttle_controller.py  test_throttle_decorator_on_controllers.py  test_throttling_xxf.py
