[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ninja_plus"
dist-name = "django-ninja-plus"
author = "Diego Saraiva"
author-email = "diegosaraiva@gmail.com"
home-page = "https://github.com/jdiego/django-ninja-plus"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Framework :: Django",
    "Framework :: Django :: 3.1",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: AsyncIO",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]

requires = [
    "Django >= 2.2",
    "django-ninja >= 1.6.0",
    "injector >= 0.19.0",
    "asgiref",
    "contextlib2"
]
description-file = "README.md"
requires-python = ">=3.7"

[tool.flit.metadata.urls]
Documentation = "https://github.com/jdiego/django-ninja-plus"
Repository = "https://github.com/jdiego/django-ninja-plus"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "C",
    "B",
]
ignore = [
    "E501",
    "B008",
    "C901",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["ninja_plus", "ninja_extra"]
known-third-party = ["django", "ninja", "injector", "pydantic", "asgiref", "contextlib2"]

[tool.mypy]
show_column_numbers = true
follow_imports = "normal"
ignore_missing_imports = true
disallow_untyped_calls = true
warn_return_any = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_reexport = true
disable_error_code = ["var-annotated", "misc"]

[[tool.mypy.overrides]]
module = "ninja_extra.compatible.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "ninja_plus.compatible.*"
ignore_errors = true
